# VertexLang

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: math_utils.vt
src/: bytecode.rs  compiler.rs  data.rs  lib.rs  main.rs  tokenization.rs  utils.rs  virtual_machine.rs
src/bytecode/: error.rs  exec.rs  mod.rs  ops.rs  reader.rs  util.rs  vm.rs
src/compiler/: ast.rs  ast_to_ir.rs  bytecode.rs  compiler_error.rs  context.rs  errors.rs  expressions.rs  grammar.pest  grammar.rs  interpreter.rs  ir.rs  ir_builder.rs  ir_context.rs  ir_datatype.rs  ir_function.rs  ir_node.rs  ir_nodes.rs  ir_path.rs  ir_struct.rs  mod.rs  nodes.rs  parser.rs  peg.rs  token_reader.rs  token_walker.rs  tokenization.rs
src/context/: datatype.rs  function.rs  mod.rs
src/core/: types.rs
src/data/: data_man.rs  datatype.rs  graph.rs  mod.rs  vertex_function.rs
src/grammars/: vertex.pest
src/ir/: compiler.rs  errors.rs  mod.rs
src/multithreading/: mod.rs  workers.rs
src/parser/: ast.rs  grammar.rs  mod.rs  nodes.rs
src/registry/: error.rs  function.rs  mod.rs
src/runtime/: bytecode.rs  math.rs  mod.rs  virtual_machine.rs
src/runtime/multithreading/: jobs.rs  mod.rs  workers.rs
src/runtime/registry/: error.rs  function.rs
src/vm/: externs.rs  graph.rs  mod.rs  node.rs
