[package]
name = "vertex_lang"
version = "0.0.1"
edition = "2021"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
description = "The compiler and interprter for the Vertex programming language."
homepage = "https://github.com/TheDudeFromCI/VertexLang"
repository = "https://github.com/TheDudeFromCI/VertexLang"
license = "MIT"
keywords = ["vertex", "language", "programming", "compiler"]
readme = "README.md"
exclude = [".github/*"]

[dependencies]
strum = "0.23"
strum_macros = "0.23"
clap = { version = "3.2.20", features = ["derive"] }
