[package]
name = "vertex_lang"
version = "0.0.1"
edition = "2021"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
description = "The compiler and interprter for the Vertex programming language."
homepage = "https://github.com/TheDudeFromCI/VertexLang"
repository = "https://github.com/TheDudeFromCI/VertexLang"
license = "MIT"
keywords = ["vertex", "language", "programming", "compiler"]
readme = "README.md"
exclude = [".github/*"]

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"] }
derivative = "2.2.0"
lazy_static = "1.4.0"
pest = "2.3.0"
pest_derive = "2.3.0"
regex = "1.6.0"
thiserror = "1.0.36"
anyhow = "1.0.66"

[dev-dependencies]
pretty_assertions = "1.3.0"
indoc = "1.0.7"
ntest = "0.8.1"
